fix: removed vite base url

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_SUPABASE_STORAGE_URL=https://qyfkwoycanforunkxdnu.supabase.co/storage/v1/object/public/posts/
+VITE_SUPABASE_AUTH_REDIRECT_URL=https://mznrasil.github.io/react-social/
